tests/errors/unused_binding_short.rs
use set_builder::set;

fn main() {
    let _ = set! { x : x <- [1, 2, 3], y <- [4, 5, 6] };
}
