tests/errors/unused_binding_short.stderr
error: proc macro panicked
 --> tests/errors/unused_binding_short.rs:4:13
  |
4 |     let _ = set! { x : x <- [1, 2, 3], y <- [4, 5, 6] };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: binding to y is unused
